Fix style issue on mobile devices

--- a/resources/public/assets/main.css
+++ b/resources/public/assets/main.css
@@ -538,28 +538,16 @@ video {
   position: static;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
 .mb-0 {
   margin-bottom: 0px;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 
 .block {
@@ -2307,6 +2295,10 @@ body.post-page code {
 }
 
 @media (min-width: 768px) {
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
